--- a/apps/basic/package.json
+++ b/apps/basic/package.json
@@ -18,6 +18,7 @@
     "vite": "^7.1.7"
   },
   "dependencies": {
+    "@fluid/glsl": "workspace:*",
     "lil-gui": "^0.21.0",
     "three": "^0.180.0"
   }
